force-app/main/default/objects/Account/fields/Product_Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Product_Exclusivity__c</fullName>
    <label>Product Exclusivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Other</valueSetName>
    </valueSet>
</CustomField>