force-app/main/default/objects/Account/fields/Product_exclusivity_commentary__c.field-meta.xml
<CustomField>
    <fullName>Product_exclusivity_commentary__c</fullName>
    <label>Product exclusivity commentary</label>
    <length>150</length>
    <type>Text</type>
</CustomField>