force-app/main/default/objects/Account/fields/Projected_Account_Lifetime_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Projected_Account_Lifetime_Revenue__c</fullName>
    <label>Projected Account Lifetime Revenue</label>
    <summarizedField>Opportunity.Projected_Opportunity_Lifetime_Revenue__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>