force-app/main/default/objects/Account/fields/Renewal_Term__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term__c</fullName>
    <label>Renewal Term</label>
    <type>TextArea</type>
</CustomField>