force-app/main/default/objects/Account/fields/Service_Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Type__c</fullName>
    <label>Service Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OEM Dealer</fullName>
            </value>
            <value>
                <fullName>Business Partner and Contract Servicers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>