force-app/main/default/objects/Account/fields/SP_Active__c.field-meta.xml
<CustomField>
    <fullName>SP_Active__c</fullName>
    <label>SP Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>