force-app/main/default/objects/Account/fields/SP_Network_Flag__c.field-meta.xml
<CustomField>
    <fullName>SP_Network_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SP Network Flag</label>
    <type>Checkbox</type>
</CustomField>