force-app/main/default/objects/Account/fields/subscriber_Billing_Terms__c.field-meta.xml
<CustomField>
    <fullName>subscriber_Billing_Terms__c</fullName>
    <label>Subscriber Billing Terms (in years)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>