force-app/main/default/objects/Account/fields/Team_Member_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Assigned__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>HMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>