force-app/main/default/objects/Account/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Use this to identify areas and combine them together to use in views and filters.</description>
    <label>Territory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>