force-app/main/default/objects/Account/fields/Text_Capable__c.field-meta.xml
<CustomField>
    <fullName>Text_Capable__c</fullName>
    <inlineHelpText>Text Capable Score 1 = Worst, 5 = Best</inlineHelpText>
    <label>Text Capable</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>