force-app/main/default/objects/Account/fields/TIMX_Vendor_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>TIMX_Vendor_Site_ID__c</fullName>
    <label>TIMX - Vendor Site ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>