force-app/main/default/objects/Account/fields/Total_Active_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Enrollments__c</fullName>
    <description>Sum of active enrollments for agents assigned to account.  Sums from agent level using roll up builder.</description>
    <label>Total Active Enrollments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>