force-app/main/default/objects/Account/fields/Total_Sides_Summary__c.field-meta.xml
<CustomField>
    <fullName>Total_Sides_Summary__c</fullName>
    <label>Total Sides Summary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>