force-app/main/default/objects/Account/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <inlineHelpText>Training Rank 1 = Worst, 5 = Best</inlineHelpText>
    <label>Training</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>