force-app/main/default/objects/Account/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <inlineHelpText>Website Score 1 = Worst, 5 = Best</inlineHelpText>
    <label>Website</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>