force-app/main/default/objects/Account/recordTypes/BD_Brokers.recordType-meta.xml
<RecordType>
    <fullName>BD_Brokers</fullName>
    <active>true</active>
    <description>Use this to track Broker Accounts for Buisness Development</description>
    <label>BD Brokers</label>
</RecordType>