force-app/main/default/objects/Account/recordTypes/BD_Clients.recordType-meta.xml
<RecordType>
    <fullName>BD_Clients</fullName>
    <active>true</active>
    <description>Use this to track Client Accounts for Business Development</description>
    <label>BD Clients</label>
</RecordType>