force-app/main/default/objects/Account/recordTypes/Escrow_Title.recordType-meta.xml
<RecordType>
    <fullName>Escrow_Title</fullName>
    <active>true</active>
    <description>Use this to track Escrow/Title</description>
    <label>Escrow/Title</label>
</RecordType>