force-app/main/default/objects/Account/recordTypes/HMS_Clients.recordType-meta.xml
<RecordType>
    <fullName>HMS_Clients</fullName>
    <active>true</active>
    <description>Use this to track Client Accounts for HMS</description>
    <label>HMS Clients</label>
</RecordType>