force-app/main/default/objects/Account/recordTypes/PON.recordType-meta.xml
<RecordType>
    <fullName>PON</fullName>
    <active>true</active>
    <description>Use this to track PON Prospects and Service Providers</description>
    <label>PON</label>
</RecordType>