force-app/main/default/objects/Account/validationRules/CCMID_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>CCMID_Length</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(CCMID__c) = 5 || LEN(CCMID__c) = 10</errorConditionFormula>
    <errorDisplayField>CCMID__c</errorDisplayField>
    <errorMessage>This field should be five characters or ten characters total.</errorMessage>
</ValidationRule>