force-app/main/default/objects/Account/listViews/Accounts_by_Last_Modified_Date.listView-meta.xml
<ListView>
    <fullName>Accounts_by_Last_Modified_Date</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>Accounts by Last Modified Date</label>
</ListView>