force-app/main/default/objects/Account/listViews/Accounts_with_Parent_Accounts.listView-meta.xml
<ListView>
    <fullName>Accounts_with_Parent_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Account_Status__c</columns>
    <columns>CCMID__c</columns>
    <columns>CCM_Type_Branch_Code__c</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.HMS_Clients</value>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>HMS Accounts with Parent Accounts</label>
</ListView>