force-app/main/default/objects/Account/listViews/All_Accounts_in_CA.listView-meta.xml
<ListView>
    <fullName>All_Accounts_in_CA</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>equals</operation>
        <value>CA</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.HMS_Clients</value>
    </filters>
    <label>All Accounts in CA</label>
</ListView>