force-app/main/default/objects/Account/listViews/Business_Development_Accounts.listView-meta.xml
<ListView>
    <fullName>Business_Development_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>NDA__c</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Industry_Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.BD_Clients</value>
    </filters>
    <label>Business Development Accounts</label>
</ListView>