force-app/main/default/objects/Account/listViews/Created_from_Enrollment_FTP.listView-meta.xml
<ListView>
    <fullName>Created_from_Enrollment_FTP</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_from_Enrollment_FTP__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Created from Enrollment FTP</label>
</ListView>