force-app/main/default/objects/Account/listViews/Escrow_Title_Accounts.listView-meta.xml
<ListView>
    <fullName>Escrow_Title_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Escrow_Title</value>
    </filters>
    <label>Escrow/Title Accounts</label>
</ListView>