force-app/main/default/objects/Account/listViews/HMS_Accounts.listView-meta.xml
<ListView>
    <fullName>HMS_Accounts</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Name_Alias__c</columns>
    <columns>Logo_ID__c</columns>
    <columns>Account_Status__c</columns>
    <columns>CCMID__c</columns>
    <columns>Listings_Sold_Summary__c</columns>
    <columns>Total_Sides_Summary__c</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.HMS_Clients</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS2_ZIP</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>HMS Accounts</label>
</ListView>