force-app/main/default/objects/Account/listViews/Rushmore_Loan_Management_Services.listView-meta.xml
<ListView>
    <fullName>Rushmore_Loan_Management_Services</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Rushmore Loan Management Services</label>
</ListView>